refactor project to object oriented